--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id='title'>Welcome to Ember.js</h2>
-
 {{outlet}}
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12"><hr /></div>
+        <div class="col-sm-12">
+            <p class="text-center">This is <a href="http://github.com/netgusto/ember-cli-cal">ember-cli-cal</a> by <a href="http://netgusto.com">Net Gusto</a>. <a href="https://twitter.com/share" class="twitter-share-button" data-text="ember-cli-cal - A Better #Calendar #Component for #EmberJS and ember-cli by @netgusto">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+        </div>
+    </div>
+</div>
