--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,9 @@
 html, body {
-  margin: 20px;
+    margin: 10px;
 }
+
+h2.demo-calendartitle {
+    margin-top: 0;
+}
+
+.demo-header { margin-bottom:20px; }
